<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.qenherkhopeshef.jsesh</groupId>
  <artifactId>JSesh-all</artifactId>
  <version>7-jdk9-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>JSesh complete distribution</name>
  <repositories>
    <repository>
      <id>org.qenherkhopeshef</id>
      <name>Qenherkhopeshef maven repository</name>
      <url>http://www.qenherkhopeshef.org/maven</url>
      <!-- <url>file:///Users/rosmord/TEMPMAVEN</url> -->
    </repository>
  </repositories>
  <distributionManagement>
    <repository>
      <id>qenherkhopeshef.repository</id>
      <name>ssh-qenher-repository</name>
      <url>${env.JSESH_REPOS}</url>
    </repository>
  </distributionManagement>
  <build>
    <plugins>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-resources-plugin</artifactId>
	<version>2.5</version>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-compiler-plugin</artifactId>
	<version>2.0</version>
	<configuration>
	  <source>12</source>
	  <target>12</target>
           <encoding>UTF-8</encoding>
	</configuration>
      </plugin>
      <plugin>
	<artifactId>maven-deploy-plugin</artifactId>
	<version>2.5</version>
	<dependencies>
	  <dependency>
	    <groupId>org.apache.maven.wagon</groupId>
	    <artifactId>wagon-ssh</artifactId>
	    <version>1.0-beta-7</version>
	  </dependency>
	</dependencies>
      </plugin>
    </plugins>
  </build>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <modules>
    <module>jvectClipboard</module>
    <module>cupAndlex</module>
    <module>cupruntime</module>
    <module>qenherkhopeshefUtils</module>
    <module>jsesh</module>
    <module>jsesh-installer</module>
    <module>jseshGlyphs</module>
    <module>prepareJSeshRelease</module>
    <module>jhotdrawfw</module>
    <module>jseshAppli</module>
    <module>signInfoAppli</module>
    <module>jseshDemos</module>
  </modules>
</project>
